<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/black">

    <!--    Cabecera App-->
    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/ZalandoBrand"
        android:textSize="80sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:text="@string/zalando"
        android:contentDescription="@string/t_tulo_de_la_tienda" />

    <!--    Cabecera catálogo-->
    <TextView
        android:id="@+id/tvCatalogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnImage"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.7"
        android:text="@string/visita_nuestro_cat_logo"
        android:contentDescription="@string/catalogo_de_ropa" />

    <!--    Botón acceso al catálogo-->
    <ImageButton
        android:id="@+id/btnImage"
        android:layout_width="380dp"
        android:layout_height="200dp"
        android:layout_marginEnd="12dp"
        android:background="@color/black"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@drawable/catalogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintVertical_bias="0.513"
        android:contentDescription="@string/bot_n_para_ir_al_cat_logo" />



</androidx.constraintlayout.widget.ConstraintLayout>